--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>JJ Blog</title>
+    <title>JJable Blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -13,8 +13,8 @@
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
-    <div class="wrapper row0">
-        <div id="topbar" class="hoc clear">
+    <div class="wrapper row0 ">
+        <div id="topbar" class="hoc clear scrollUp">
             <div class="fl_left">
                 <!-- ################################################################################################ -->
                 <ul class="nospace">
@@ -53,7 +53,7 @@
         <header id="header" class="hoc clear">
             <div id="logo" class="fl_left">
                 <!-- ################################################################################################ -->
-                <h1><a href="index.html">Jable Blog</a></h1>
+                <h1><a href="index.html">Jable <span>Blog</span></a></h1>
                 <!-- ################################################################################################ -->
             </div>
             <nav id="mainav" class="fl_right">
@@ -84,7 +84,7 @@
                         </ul>
                     </li>
                     <li><a href="#">About us</a></li>
-                    <li><a href="#">Contact us</a></li>
+                    <li><a href="./pages/contact.html">Contact us</a></li>
                 </ul>
                 <!-- ################################################################################################ -->
             </nav>
