--- a/pages/basic-grid.html
+++ b/pages/basic-grid.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Trealop | Pages | Basic Grid</title>
+    <title>JJable Blog | Pages | Basic Grid</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -53,7 +53,7 @@
             <div class="fl_right">
                 <!-- ################################################################################################ -->
                 <ul class="nospace">
-                    <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+                    <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
                     <li><a href="#" title="Help Centre"><i class="far fa-life-ring"></i></a></li>
                     <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="#" title="Sign Up"><i class="fas fa-edit"></i></a></li>
