--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Trealop | Pages | Full Width</title>
+    <title>JJ Blog | Pages | Full Width</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -25,7 +25,7 @@
             <div class="fl_right">
                 <!-- ################################################################################################ -->
                 <ul class="nospace">
-                    <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+                    <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
                     <li><a href="#" title="Help Centre"><i class="far fa-life-ring"></i></a></li>
                     <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="#" title="Sign Up"><i class="fas fa-edit"></i></a></li>
@@ -52,13 +52,13 @@
         <header id="header" class="hoc clear">
             <div id="logo" class="fl_left">
                 <!-- ################################################################################################ -->
-                <h1><a href="index.html">Jable Blog</a></h1>
+                <h1><a href="../index.html">Jable Blog</a></h1>
                 <!-- ################################################################################################ -->
             </div>
             <nav id="mainav" class="fl_right">
                 <!-- ################################################################################################ -->
                 <ul class="clear">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="../index.html">Home</a></li>
                     <li><a class="drop" href="#">Tutorial</a>
                         <ul>
                             <li><a href="./gallery.html">Gallery</a></li>
