--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Trealop | Pages | Gallery</title>
+    <title>JJable Blog | Pages | Gallery</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -53,13 +53,13 @@
         <header id="header" class="hoc clear">
             <div id="logo" class="fl_left">
                 <!-- ################################################################################################ -->
-                <h1><a href="index.html">Jable Blog</a></h1>
+                <h1><a href="../index.html">Jable Blog</a></h1>
                 <!-- ################################################################################################ -->
             </div>
             <nav id="mainav" class="fl_right">
                 <!-- ################################################################################################ -->
                 <ul class="clear">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="../index.html">Home</a></li>
                     <li><a class="drop" href="#">Tutorial</a>
                         <ul>
                             <li><a href="./gallery.html">Gallery</a></li>
@@ -93,7 +93,7 @@
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
-    <div class="wrapper bgded overlay gradient" style="background-image:url('../images/demo/backgrounds/01.png');">
+    <div class="wrapper bgded overlay gradient" style="background-image:url('../images/demo/backgrounds/bg-ga.png');background-attachment: fixed;background-size: cover;">
         <div id="breadcrumb" class="hoc clear">
             <!-- ################################################################################################ -->
             <h6 class="heading">Gallery</h6>
@@ -119,40 +119,40 @@
                         <header class="heading">Gallery Title Goes Here</header>
                         <ul class="nospace clear">
                             <li class="one_quarter first">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image1.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image2.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image3.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image4.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter first">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image5.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image6.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image7.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image8.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter first">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image1.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image1.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image1.jpg" alt="Example images number"></a>
                             </li>
                             <li class="one_quarter">
-                                <a href="#"><img src="../images/demo/gallery/01.png" alt=""></a>
+                                <a href="#"><img src="../images/demo/gallery/image1.jpg" alt="Example images number"></a>
                             </li>
                         </ul>
                         <figcaption>Gallery Description Goes Here</figcaption>
