--- a/pages/sidebar-right.html
+++ b/pages/sidebar-right.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>JJ Blog | Pages | Sidebar Right</title>
+    <title>JJable Blog | Pages | Sidebar Right</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -26,7 +26,7 @@
             <div class="fl_right">
                 <!-- ################################################################################################ -->
                 <ul class="nospace">
-                    <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+                    <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
                     <li><a href="#" title="Help Centre"><i class="far fa-life-ring"></i></a></li>
                     <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="#" title="Sign Up"><i class="fas fa-edit"></i></a></li>
@@ -53,13 +53,13 @@
         <header id="header" class="hoc clear">
             <div id="logo" class="fl_left">
                 <!-- ################################################################################################ -->
-                <h1><a href="index.html">Jable Blog</a></h1>
+                <h1><a href="../index.html">Jable Blog</a></h1>
                 <!-- ################################################################################################ -->
             </div>
             <nav id="mainav" class="fl_right">
                 <!-- ################################################################################################ -->
                 <ul class="clear">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="../index.html">Home</a></li>
                     <li><a class="drop" href="#">Tutorial</a>
                         <ul>
                             <li><a href="./gallery.html">Gallery</a></li>
@@ -93,15 +93,14 @@
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
-    <div class="wrapper bgded overlay gradient" style="background-image:url('../images/demo/backgrounds/01.png');">
+    <div class="wrapper bgded overlay gradient">
         <div id="breadcrumb" class="hoc clear">
             <!-- ################################################################################################ -->
-            <h6 class="heading">Sidebar Right</h6>
+            <h6 class="heading" style="text-align: center;position: relative; top: -60px;">Sidebar Right</h6>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Lorem</a></li>
-                <li><a href="#">Ipsum</a></li>
-                <li><a href="#">Dolor</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Sidebar Right</a></li>
             </ul>
             <!-- ################################################################################################ -->
         </div>
